@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3881 2005/02/27 07:44:25 ptsarenko Exp $
+ * $Id: ChangeLog,v 1.3883 2005/02/27 15:00:00 ptsarenko Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-02-27 15:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
+  * contrib/rdd_ads/adsfunc.c
+    * Type cast correction to MSVC on my previous commit
+
 2005-02-27 18:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rdd/dbf1.c
   * source/rdd/sdf1.C
